apps/media/chat/k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
  labels:
    app: openwebui-bedrock
spec:
  type: ClusterIP 
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: openwebui-bedrock
