apps/media/chat/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: chat
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: chat.rmikl.pl
    http:
      paths:
      - backend:
          service:
            name: openwebui-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - chat.rmikl.pl
    secretName: rmikl.pl
